--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,12 @@
     <meta name="keywords" content="Resallie, studentenmarktplaats" />
     <meta name="description" content="Resallie website, a studentmarketplace" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -23,6 +29,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Resallie</title>
+    <script
+      src="https://kit.fontawesome.com/808129a4e6.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
