--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/Beeldmerk_Resallie.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#f7f8f8" />
-    <meta name="keywords" content="Resallie, studentenmarktplaats" />
+    <meta name="keywords" content="Resallie, Studentenmarktplaats" />
     <meta name="description" content="Resallie website, a studentmarketplace" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Beeldmerk_Resallie.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,10 +29,6 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Resallie</title>
-    <script
-      src="https://kit.fontawesome.com/808129a4e6.js"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
